--- a/index.html
+++ b/index.html
@@ -150,6 +150,11 @@
             return { current: '10-12月', next: '1-3月' };
         };
 
+        // --- 新增：取得指定日期的「年-季」字串 (例如 2026-Q1) ---
+        const getQuarterStr = (date) => {
+            return `${date.getFullYear()}-Q${Math.ceil((date.getMonth() + 1) / 3)}`;
+        };
+
         // --- App Component ---
         function App() {
           const savedUser = getLocalData('tbc_user');
@@ -483,6 +488,11 @@
             const today = new Date();
             today.setHours(0, 0, 0, 0);
 
+            // --- 新增：計算目前該顯示哪一季的資料 ---
+            const targetQStr = seasonType === 'view' 
+                ? getQuarterStr(today) 
+                : getQuarterStr(new Date(today.getFullYear(), today.getMonth() + 3, 1));
+
             scheduleData.forEach(row => {
               const dateStr = normalizeDateStr(row['日期']);
               if (!dateStr) return;
@@ -491,6 +501,9 @@
               // Supabase 版本中，可以自行決定是否要顯示過去歷史
               // 這裡保留你原本的邏輯：只顯示今天之後的班表
               if (dateObj < today) return;
+
+              // --- 新增：過濾掉非目標季別的資料 ---
+              if (getQuarterStr(dateObj) !== targetQStr) return;
 
               const session = row['堂別'];
               
@@ -519,7 +532,8 @@
                }
             });
             setFlatShifts(Array.from(shiftsMap.values()).sort((a, b) => a.dateObj - b.dateObj));
-          }, [name, scheduleData]);
+          // --- 修正：在監聽陣列中加入 seasonType，讓切換按鈕生效 ---
+          }, [name, scheduleData, seasonType]); 
 
           const addToGoogleCalendar = (shift) => {
              const year = shift.dateObj.getFullYear();
@@ -678,6 +692,11 @@
             const today = new Date();
             today.setHours(0, 0, 0, 0);
 
+            // --- 新增：換班查詢也需要過濾季別 ---
+            const targetQStr = seasonType === 'view' 
+                ? getQuarterStr(today) 
+                : getQuarterStr(new Date(today.getFullYear(), today.getMonth() + 3, 1));
+
             let potential = [];
             peopleData.forEach(person => {
               if (person.name === targetOwner) return;
@@ -700,6 +719,9 @@
                  
                  if(rDateObj < today) return;
 
+                 // --- 新增：過濾掉非目標季別的換班選項 ---
+                 if (getQuarterStr(rDateObj) !== targetQStr) return;
+
                  if(rDate === targetDateNorm || requesterBusyDates.has(rDate)) return;
                  let roleOnDay = null;
                  Object.entries(row).forEach(([k, v]) => {
@@ -721,7 +743,8 @@
 
             potential.sort((a, b) => a.stats - b.stats);
             setCandidates(potential);
-          }, [initialRequest, scheduleData, peopleData, statsData]);
+          // --- 修正：在監聽陣列中加入 seasonType ---
+          }, [initialRequest, scheduleData, peopleData, statsData, seasonType]);
 
           return (
             <div className="min-h-screen bg-slate-50 flex flex-col">
